fix: support Java version without Stream.toList